fix overflow mobile nav styles

--- a/client/src/styles/components/navigation/v2/_nav.scss
+++ b/client/src/styles/components/navigation/v2/_nav.scss
@@ -222,6 +222,8 @@
     bottom: 0;
     width: 250px;
     z-index: 99999;
+    overflow-y: auto;
+    overflow-x: hidden;
 
     @include breakpoint-max(md) {
       border-top: 1px solid black;
@@ -260,7 +262,7 @@
         transform: translateX(0);
 
         .nav-list {
-          &.test2 {
+          &.move-out {
             .nav-group__label, .nav-group__list > .nav-link > .nav-link-header {
               will-change: transform;
               transform: translateX(-30%);
@@ -390,6 +392,8 @@
               transition: 0.3s;
               visibility: hidden;
               z-index: 1;
+              overflow-y: auto;
+              overflow-x: hidden; 
             }
 
             &.children-visible {
@@ -420,7 +424,7 @@
           }
         }
 
-        ul.test2 {
+        ul.move-out {
           &::after {
             opacity: .5;
             pointer-events: all;
@@ -474,6 +478,8 @@
     .nav-open & {
       width: 250px;
       will-change: width;
+      overflow-y: auto;
+      overflow-x: hidden;
     }
   }
 
